# read-card

./: Cargo.toml  simple1.xlsx  test copy.xlsx  test2.xlsx
smartstripe/doc/: test2.xlsx
src/: main.rs
