[package]
name = "read-excel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.21.2"
chrono = "0.4.26"
csv = "1.2.2"
hex = "0.4.3"
pcsc = "2.8.0"
serde_json = "1.0.103"
xlsxwriter = "0.6.0"
